--- a/server/static/css/attach_acc.css
+++ b/server/static/css/attach_acc.css
@@ -16,7 +16,8 @@ h6:hover {
     border-bottom: 2px solid white;
 }
 
-#attach-acc-container {
+.attach-acc-container {
+    /*non mobile only*/
     position: fixed;
     z-index: 1;
     left: 0;
@@ -27,7 +28,8 @@ h6:hover {
     background-color: rgba(0,0,0,0.4);
 }
 
-#attach-acc-content {
+.attach-acc-content {
+    /*non mobile only*/
     position: relative;
     background-color: #303038;
     text-align: center;
@@ -102,14 +104,23 @@ input[type=submit].auth:hover {
     margin-top: 20px;
 }
 
-@media only screen
-and (max-width : 850px) {
-    #attach-acc-content {
-        margin: 0px;
-        width: 100%;
-        border: none;
-    }
-    #attach-acc-container {
-        background-color: #303038;
-    }
+/* MOBILE */
+.m-attach-acc-content {
+    position: relative;
+    background-color: #303038;
+    text-align: center;
+    padding: 10px 30px 20px 30px;
+    margin: 0px;
+    width: 100%;
+    border: none;
+}
+.m-attach-acc-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #303038;
 }
