--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -55,28 +55,24 @@ body {
     justify-content: space-between;
 }
 
-#mobile-header {
-    display: none;
-}
-
 #nav {
     display: flex;
     align-items: center;
 }
 
-#today {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#today-wrapper {
+.today-wrapper {
     width: 960px;
     margin: 0px auto;
     padding: 50px 0px 20px;
 }
 
 .today {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.today-w-quota {
     padding: 10px 20px 20px;
 }
 
@@ -258,38 +254,54 @@ body {
     color: #bbbbbb;
 }
 
+/* MOBILE */
+#m-body-container {
+    width: 100%;
+}
+
+.m-today-wrapper {
+    width: 100%;
+    margin: 0px auto;
+    padding: 0px 0px 20px;
+}
+
+.sub-today-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.m-today {
+    padding: 10px 20px 20px;
+}
+
+.m-settings-icon {
+    height: 24px;
+    cursor: pointer;
+}
+
+.m-chart-options {
+    color: #fff;
+    background-color: #2d333c;
+}
+
+/* BOOTSTRAP COLLAPSING MENU SHIT */
+.navbar-header {float: none;}
+.navbar-left,.navbar-right {float: none !important;}
+.navbar-toggle {display: block;}
+.navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+}
+.navbar-fixed-top {top: 0; border-width: 0 0 1px;}
+.navbar-collapse.collapse {display: none !important;}
+.navbar-nav {float: none!important; margin-top: 7.5px;}
+.navbar-nav>li {float: none;}
+.navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
+.collapse.in{display:block !important;}
+
 @media only screen and (max-width : 960px) {
     #body-container {
         width: 960px;
     }
 }
-
-/*@media only screen
-and (max-width : 950px) {
-    #mobile-header {
-        display: block;
-    }
-
-    #header {
-        display: none;
-    }
-
-    .today {
-        margin: 0px 10px;
-    }
-*/
-    /* BOOTSTRAP COLLAPSING MENU SHIT */
-    /*.navbar-header {float: none;}
-    .navbar-left,.navbar-right {float: none !important;}
-    .navbar-toggle {display: block;}
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {top: 0; border-width: 0 0 1px;}
-    .navbar-collapse.collapse {display: none !important;}
-    .navbar-nav {float: none!important; margin-top: 7.5px;}
-    .navbar-nav>li {float: none;}
-    .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
-    .collapse.in{display:block !important;}
-}*/
