--- a/server/static/css/settings.css
+++ b/server/static/css/settings.css
@@ -1,4 +1,5 @@
-#settings-container {
+.settings-container {
+    /*non mobile only*/
     position: fixed;
     z-index: 1;
     left: 0;
@@ -9,10 +10,10 @@
     background-color: rgba(0,0,0,0.4);
 }
 
-#settings-content {
+.settings-content {
+    /*non mobile only*/
     background-color: #fefefe;
     margin: 10% auto;
-    /*padding: 10px 20px;*/
     border: 1px solid #888;
     width: 800px;
 }
@@ -27,7 +28,6 @@
     font-family: Sinkin-Sans300Light;
     font-size: 25px;
     color: #000;
-    /*text-decoration: underline;*/
     margin: 0px 0px 10px;
 }
 
@@ -141,14 +141,21 @@
     margin: 0px;
 }
 
-@media only screen
-and (max-width : 850px) {
-    #settings-content {
-        margin: 0px;
-        width: 100%;
-        border: none;
-    }
-    #settings-container {
-        background-color: #fff;
-    }
+/* MOBILE */
+.m-settings-content {
+    background-color: #fefefe;
+    margin: 0px;
+    width: 100%;
+    border: none;
+}
+
+.m-settings-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #fff;
 }
