--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -29,8 +29,8 @@
 <body>
 
     <!-- SETTINGS -->
-    <div id="settings-container" class="hidden">
-        <div id="settings-content">
+    <div id="settings-container" class="settings-container hidden">
+        <div id="settings-content" class="settings-content">
             <div id="settings-title">
                 <h1>Settings</h1>
             </div>
@@ -84,8 +84,8 @@
 
     <!-- CREATE/ATTACH ACCOUNT -->
     {% if not email %}
-    <div id="attach-acc-container" class="hidden">
-        <div id="attach-acc-content">
+    <div id="attach-acc-container" class="attach-acc-container hidden">
+        <div id="attach-acc-content" class="attach-acc-content">
             <div id="close-attach-acc" onclick="closeAttachAcc();">
                 <img height=40 width=40 src="{{ url_for('static', filename='img/x-white.png') }}"/>
             </div>
@@ -189,9 +189,9 @@
                     </div>
                 </div>
             </div>
-            <div id="today-wrapper">
+            <div id="today-wrapper" class="today-wrapper">
                 <div class="loader">Loading...</div>
-                <div id="today" class="{{ today_section_class }} hidden">
+                <div id="today" class="today {{ today_section_class }} hidden">
                     <div class="sub-today inline">
                         <div class="center-text">
                             <h2>time online today</h2>
