--- a/server/templates/m_graph.html
+++ b/server/templates/m_graph.html
@@ -193,40 +193,40 @@
             <div id="today-wrapper" class="m-today-wrapper">
                 <div class="loader">Loading...</div>
                 <div id="today" class="m-today hidden">
-                    <div class="sub-today-wrapper" style="margin-bottom: 20px;">
+                    <div class="sub-today-wrapper" style="margin-bottom: 30px;">
                         <div class="sub-today">
                             <div class="center-text">
-                                <h2>time online today</h2>
+                                <h2 class="m-h2">time online today</h2>
                             </div>
                             <div class="center-text">
                                 <div class="inline">
-                                    <div class="time-part inline"><h3 id="total-hours"></h3></div>
-                                    <div class="time-part inline"><h3 id="total-minutes"></h3></div>
+                                    <div class="time-part inline"><h3 id="total-hours" class="m-h3"></h3></div>
+                                    <div class="time-part inline"><h3 id="total-minutes" class="m-h3"></h3></div>
                                 </div>
                             </div>
                             <div class="center-text">
                                 <div class="inline">
-                                    <div class="label-part inline"><h4>hours</h4></div>
-                                    <div class="label-part inline"><h4>minutes</h4></div>
+                                    <div class="m-label-part inline"><h4 class="m-h4">hours</h4></div>
+                                    <div class="m-label-part inline"><h4 class="m-h4">minutes</h4></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="sub-today-wrapper" style="margin-bottom: 20px;">
+                    <div class="sub-today-wrapper" style="margin-bottom: 30px;">
                         <div class="sub-today">
                             <div class="center-text">
-                                <h2>unproductive time today</h2>
+                                <h2 class="m-h2">unproductive time today</h2>
                             </div>
                             <div class="center-text">
                                 <div class="inline">
-                                    <div class="time-part inline"><h3 id="unprod-hours"></h3></div>
-                                    <div class="time-part inline"><h3 id="unprod-minutes"></h3></div>
+                                    <div class="time-part inline"><h3 id="unprod-hours" class="m-h3"></h3></div>
+                                    <div class="time-part inline"><h3 id="unprod-minutes" class="m-h3"></h3></div>
                                 </div>
                             </div>
                             <div class="center-text">
                                 <div class="inline">
-                                    <div class="label-part inline"><h4>hours</h4></div>
-                                    <div class="label-part inline"><h4>minutes</h4></div>
+                                    <div class="m-label-part inline"><h4 class="m-h4">hours</h4></div>
+                                    <div class="m-label-part inline"><h4 class="m-h4">minutes</h4></div>
                                 </div>
                             </div>
                         </div>
@@ -241,18 +241,18 @@
                                 </div>
                             </div>
                             <div class="center-text">
-                                <h2>of quota</h2>
+                                <h2 class="m-h2">of quota</h2>
                             </div>
                         </div>
                         <div id="streak-section" class="sub-today inline" style="padding-left: 50px;">
                             <div class="center-text">
-                                <h2>streak</h2>
+                                <h2 class="m-h2">streak</h2>
                             </div>
                             <div class="center-text">
-                                <h3 id="streak-val"></h3>
+                                <h3 id="streak-val" class="m-h3"></h3>
                             </div>
                             <div class="center-text">
-                                <h4>days</h4>
+                                <h4 class="m-h4">days</h4>
                             </div>
                         </div>
                     </div>
