--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -188,7 +188,35 @@
             </div>
         </div>
         <div id="card1">
-            <div class="day"></div>
+            <div class="day-container" id="day0">
+                <div class="day-header">S</div>
+                <div class="item first">take out garbage</div>
+            </div>
+            <div class="day-container" id="day0">
+                <div class="day-header">M</div>
+                <div class="item first">lift</div>
+                <div class="item first">clean</div>
+            </div>
+            <div class="day-container" id="day0">
+                <div class="day-header">T</div>
+            </div>
+            <div class="day-container" id="day0">
+                <div class="day-header">W</div>
+            </div>
+            <div class="day-container today-container" id="day0">
+                <div class="day-header">T</div>
+                <div class="item first">take out garbage</div>
+                <div class="item">do laundry</div>
+                <div class="item">lift</div>
+                <div class="item">extra long task asdfa sdfjasdfkasdlf asdfjskf safjd asdfj sf sdj kj sd fasjdkas sadf ajsfs s fskfd sf  dsjf</div>
+            </div>
+            <div class="day-container" id="day0">
+                <div class="day-header">F</div>
+            </div>
+            <div class="day-container" id="day0">
+                <div class="day-header">S</div>
+                <div class="item first">something</div>
+            </div>
         </div>
     </div>
 
