--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -188,34 +188,55 @@
             </div>
         </div>
         <div id="card1">
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">S</div>
-                <div class="item first">take out garbage</div>
+                <div class="items" id="day0">
+                    <div class="item">take out garbage</div>
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 0)">
             </div>
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">M</div>
-                <div class="item first">lift</div>
-                <div class="item first">clean</div>
+                <div class="items" id="day1">
+                    <div class="item">lift</div>
+                    <div class="item">clean</div>
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 1)">
             </div>
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">T</div>
+                <div class="items" id="day2">
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 2)">
             </div>
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">W</div>
+                <div class="items" id="day3">
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 3)">
             </div>
-            <div class="day-container today-container" id="day0">
+            <div class="day-container today-container">
                 <div class="day-header">T</div>
-                <div class="item first">take out garbage</div>
-                <div class="item">do laundry</div>
-                <div class="item">lift</div>
-                <div class="item">extra long task asdfa sdfjasdfkasdlf asdfjskf safjd asdfj sf sdj kj sd fasjdkas sadf ajsfs s fskfd sf  dsjf</div>
+                <div class="items" id="day4">
+                    <div class="item">take out garbage</div>
+                    <div class="item">do laundry</div>
+                    <div class="item">lift</div>
+                    <div class="item">extra long task asdfa sdfjasdfkasdlf asdfjskf safjd asdfj sf sdj kj sd fasjdkas sadf ajsfs s fskfd sf  dsjf</div>
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 4)">
             </div>
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">F</div>
+                <div class="items" id="day5">
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 5)">
             </div>
-            <div class="day-container" id="day0">
+            <div class="day-container">
                 <div class="day-header">S</div>
-                <div class="item first">something</div>
+                <div class="items" id="day6">
+                    <div class="item">something</div>
+                </div>
+                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 6)">
             </div>
         </div>
     </div>
