--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -190,52 +190,37 @@
         <div id="card1">
             <div class="day-container">
                 <div class="day-header">S</div>
-                <div class="items" id="day0">
-                    <div class="item">take out garbage</div>
-                </div>
+                <div class="items" id="day0"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 0)">
             </div>
             <div class="day-container">
                 <div class="day-header">M</div>
-                <div class="items" id="day1">
-                    <div class="item">lift</div>
-                    <div class="item">clean</div>
-                </div>
+                <div class="items" id="day1"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 1)">
             </div>
             <div class="day-container">
                 <div class="day-header">T</div>
-                <div class="items" id="day2">
-                </div>
+                <div class="items" id="day2"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 2)">
             </div>
             <div class="day-container">
                 <div class="day-header">W</div>
-                <div class="items" id="day3">
-                </div>
+                <div class="items" id="day3"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 3)">
             </div>
             <div class="day-container today-container">
                 <div class="day-header">T</div>
-                <div class="items" id="day4">
-                    <div class="item">take out garbage</div>
-                    <div class="item">do laundry</div>
-                    <div class="item">lift</div>
-                    <div class="item">extra long task asdfa sdfjasdfkasdlf asdfjskf safjd asdfj sf sdj kj sd fasjdkas sadf ajsfs s fskfd sf  dsjf</div>
-                </div>
+                <div class="items" id="day4"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 4)">
             </div>
             <div class="day-container">
                 <div class="day-header">F</div>
-                <div class="items" id="day5">
-                </div>
+                <div class="items" id="day5"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 5)">
             </div>
             <div class="day-container">
                 <div class="day-header">S</div>
-                <div class="items" id="day6">
-                    <div class="item">something</div>
-                </div>
+                <div class="items" id="day6"></div>
                 <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 6)">
             </div>
         </div>
