--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -188,40 +188,50 @@
             </div>
         </div>
         <div id="card1">
-            <div class="day-container">
+            <div class="loader">Loading...</div>
+            <div class="day-container hidden" id="day0-container">
                 <div class="day-header">S</div>
                 <div class="items" id="day0"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 0)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 0)">
             </div>
-            <div class="day-container">
+            <div class="day-container hidden" id="day1-container">
                 <div class="day-header">M</div>
                 <div class="items" id="day1"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 1)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 1)">
             </div>
-            <div class="day-container">
+            <div class="day-container hidden" id="day2-container">
                 <div class="day-header">T</div>
                 <div class="items" id="day2"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 2)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 2)">
             </div>
-            <div class="day-container">
+            <div class="day-container hidden" id="day3-container">
                 <div class="day-header">W</div>
                 <div class="items" id="day3"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 3)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 3)">
             </div>
-            <div class="day-container today-container">
+            <div class="day-container hidden" id="day4-container">
                 <div class="day-header">T</div>
                 <div class="items" id="day4"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 4)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 4)">
             </div>
-            <div class="day-container">
+            <div class="day-container hidden" id="day5-container">
                 <div class="day-header">F</div>
                 <div class="items" id="day5"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 5)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 5)">
             </div>
-            <div class="day-container">
+            <div class="day-container hidden" id="day6-container">
                 <div class="day-header">S</div>
                 <div class="items" id="day6"></div>
-                <input class="new-item" type="text" value="" placeholder="new task" onkeypress="newTaskKeyPress(this, event, 6)">
+                <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 6)">
+            </div>
+        </div>
+        <div id="card2">
+            <div class="loader">Loading...</div>
+            <div id="categories-wrapper" class="hidden">
+                <div class="column" id="col0"></div>
+                <div class="column" id="col1"></div>
+                <div class="column" id="col2"></div>
+                <div class="column" id="col3"></div>
             </div>
         </div>
     </div>
@@ -231,6 +241,7 @@
 
     <!-- <script src="{{ url_for('static', filename='js/logout.js') }}"></script> -->
     <!-- <script src="{{ url_for('static', filename='js/attach_acc.js') }}"></script> -->
+    <script src="{{ url_for('static', filename='js/util.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tasks.js') }}"></script>
     <script src="https://apis.google.com/js/platform.js?onload=onOAuthLoad" async defer></script>
 </body>
