added frontend for add category button

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -228,7 +228,12 @@
         <div id="card2">
             <div class="loader">Loading...</div>
             <div id="categories-wrapper" class="hidden">
-                <div class="column" id="col0"></div>
+                <div class="column" id="col0">
+                    <div class="add-category">
+                        <div class="bar vertical"></div>
+                        <div class="bar horizontal"></div>
+                    </div>
+                </div>
                 <div class="column" id="col1"></div>
                 <div class="column" id="col2"></div>
                 <div class="column" id="col3"></div>
