--- a/server/static/css/tasks.css
+++ b/server/static/css/tasks.css
@@ -118,4 +118,29 @@ hr {
     margin: 3px;
     /*border-bottom: 1px solid #2d333c;*/
 }
+
+.add-category {
+    margin-top: 8px;
+    height: 100px;
+    border: 3px dashed #2d333c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bar {
+  margin: 0 auto;
+  position: absolute;
+  background-color: #2d333c;
+}
+
+.horizontal {
+    width: 40px;
+    height: 7px;
+}
+
+.vertical {
+  width: 7px;
+  height: 40px;
+}
 /* ~~~~~~~~~~~~~~~~~ */
