add task is now working for both days and categories

--- a/server/templates/tasks.html
+++ b/server/templates/tasks.html
@@ -191,37 +191,37 @@
             <div class="loader">Loading...</div>
             <div class="day-container hidden" id="day0-container">
                 <div class="day-header">S</div>
-                <div class="items" id="day0"></div>
+                <div id="day0"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 0)">
             </div>
             <div class="day-container hidden" id="day1-container">
                 <div class="day-header">M</div>
-                <div class="items" id="day1"></div>
+                <div id="day1"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 1)">
             </div>
             <div class="day-container hidden" id="day2-container">
                 <div class="day-header">T</div>
-                <div class="items" id="day2"></div>
+                <div id="day2"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 2)">
             </div>
             <div class="day-container hidden" id="day3-container">
                 <div class="day-header">W</div>
-                <div class="items" id="day3"></div>
+                <div id="day3"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 3)">
             </div>
             <div class="day-container hidden" id="day4-container">
                 <div class="day-header">T</div>
-                <div class="items" id="day4"></div>
+                <div id="day4"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 4)">
             </div>
             <div class="day-container hidden" id="day5-container">
                 <div class="day-header">F</div>
-                <div class="items" id="day5"></div>
+                <div id="day5"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 5)">
             </div>
             <div class="day-container hidden" id="day6-container">
                 <div class="day-header">S</div>
-                <div class="items" id="day6"></div>
+                <div id="day6"></div>
                 <input class="new-item" type="text" value="" placeholder="add task" onkeypress="newTaskKeyPress(this, event, 'day', 6)">
             </div>
         </div>
